openjdk23/jdk/test/langtools/tools/javac/7129225/TestImportStar.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

 //The @compile/fail... verifies that the fix doesn't break the normal compilation of import xxx.*
 //The @comple/ref... verifies the fix fixes the bug

import xxx.*;

@Anno
public class TestImportStar {
}
